feat(table): update table

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,5 +7,12 @@
     "CLOSE_OTHER": "Close other",
     "COLOSE_ALL": "Close all",
     "SWITCH_THEME": "Switch theme"
+  },
+  "TABLE": {
+    "EMPTY": "Empty",
+    "ACTIONS": "Actions",
+    "TOTAL_PAGE": "Total pages: {{total}}",
+    "DISPLAY": "Display",
+    "ITEM": "items"
   }
 }
